--- a/src/static/assets/css/style.css
+++ b/src/static/assets/css/style.css
@@ -24,17 +24,53 @@ nav {
     height: 100vh;
     top: 0;
     left: 0;
+    padding-top: 1rem;
+    box-sizing: border-box;
     border-top-right-radius: 12px;
     border-bottom-right-radius: 12px;
     transition: width .6s;
     z-index: 200;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+
+    text-wrap: nowrap;
+    overflow: hidden;
 }
 
-nav:hover {
+nav .el {
+    display: flex;
+    align-items: center;
+    gap: 1px;
+
+    /* padding: 1rem 0; */
+
+    font-size: 1.2rem;
+}
+
+nav .el *:first-child {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: var(--navbar-width);
+}
+
+nav .el *:last-child {
+    width: calc(var(--navbar-expanded-width) - var(--navbar-width));
+}
+
+nav .el .icon-sidebar {
+    font-size: 1.6rem;
+}
+
+nav.active {
     width: var(--navbar-expanded-width);
 }
 
 #editor {
+    background-color: var(--theme-1);
+    font-family: 'Open Sans', sans-serif;
     position: absolute;
     width: calc(100vw - var(--navbar-width));
     height: 100vh;
@@ -42,6 +78,7 @@ nav:hover {
     left: var(--navbar-width);
     outline: none;
     padding: 1rem;
+    padding-top: 1.5rem;
     border-radius: 10px;
     box-sizing: border-box;
     overflow: auto;
@@ -50,15 +87,62 @@ nav:hover {
     white-space: nowrap;
 }
 
+/* Size */
 #editor::-webkit-scrollbar {
-    display: none;
+    width: .35rem;
+    height: .35rem;
 }
 
-nav:hover~#editor {
+/* Track */
+#editor::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+/* Handle */
+#editor::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    transition: background 0.3s;
+}
+
+/* Handle on hover */
+#editor::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.6);
+}
+
+.editorTitle {
+    position: absolute;
+    /* below value is based on --navbar-expanded-width */
+    left: calc(var(--navbar-expanded-width) + 30%);
+    min-width: 1rem;
+    transform: translateX(-50%);
+    top: 0;
+    box-sizing: border-box;
+    font-size: 2rem;
+    text-wrap: nowrap;
+
+    z-index: 50;
+    opacity: 0;
+    transition: opacity 0.6s, border-bottom 0.3s;
+    outline: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0);
+}
+
+.editorTitle:focus {
+    border-bottom: 1px solid rgba(255, 255, 255, 1);
+}
+
+nav.active~#editor {
     background-color: var(--theme-2);
+    cursor: pointer;
+}
+
+nav.active~.editorTitle {
+    opacity: 1;
 }
 
 .titleBar {
+    font-family: 'Alkatra', sans-serif;
     position: fixed;
     display: flex;
     align-items: center;
@@ -78,6 +162,10 @@ nav:hover~#editor {
     z-index: 999;
 }
 
+.titleBar .trafficLight {
+    -webkit-app-region: none;
+}
+
 .titleBar.active {
     top: 0;
 }
@@ -87,7 +175,7 @@ nav:hover~#editor {
 }
 
 .titleBar .trafficLight {
-    width: 12px;
+    width: 14px;
     aspect-ratio: 1;
     border-radius: 100%;
 }
