--- a/src/static/assets/css/style.css
+++ b/src/static/assets/css/style.css
@@ -111,7 +111,7 @@ nav.active {
     background: rgba(255, 255, 255, 0.6);
 }
 
-.editorTitle {
+#noteTitle {
     position: absolute;
     /* below value is based on --navbar-expanded-width */
     left: calc(var(--navbar-expanded-width) + 30%);
@@ -129,7 +129,7 @@ nav.active {
     border-bottom: 1px solid rgba(255, 255, 255, 0);
 }
 
-.editorTitle:focus {
+#noteTitle:focus {
     border-bottom: 1px solid rgba(255, 255, 255, 1);
 }
 
@@ -138,7 +138,7 @@ nav.active~#editor {
     cursor: pointer;
 }
 
-nav.active~.editorTitle {
+nav.active~#noteTitle {
     opacity: 1;
 }
 
