Minor improvements and partly added new features

--- a/src/static/assets/css/style.css
+++ b/src/static/assets/css/style.css
@@ -1,6 +1,9 @@
+/* General styling */
+
 :root {
     --theme-1: rgb(10, 10, 23);
     --theme-2: rgb(12, 12, 28);
+    --theme-3: rgb(38, 38, 66);
     --navbar-background: rgb(18, 18, 36);
     --alt: rgb(85, 85, 145);
 
@@ -17,222 +20,4 @@ body {
     background-color: var(--theme-2);
     color: white;
     font-family: 'SUSE', sans-serif;
-    overflow: hidden;
-}
-
-nav {
-    background-color: var(--navbar-background);
-    position: absolute;
-    width: var(--navbar-width);
-    height: 100vh;
-    top: 0;
-    left: 0;
-    padding-top: 1rem;
-    box-sizing: border-box;
-    border-top-right-radius: 12px;
-    border-bottom-right-radius: 12px;
-    transition: width .6s, transform .6s;
-    z-index: 200;
-
-    display: flex;
-    gap: 1px;
-    user-select: none;
-
-    text-wrap: nowrap;
-    overflow: hidden;
-}
-
-nav .collapsed {
-    min-width: var(--navbar-width);
-    cursor: pointer;
-}
-
-nav .expanded, nav .collapsed {
-    display: flex;
-    flex-direction: column;
-    gap: 1.25rem;
-}
-
-nav .expanded .el, nav .collapsed .el {
-    display: flex;
-    align-items: center;
-
-    font-size: 1.2rem;
-}
-
-nav .collapsed .el {
-    justify-content: center;
-}
-
-nav .expanded .el *:first-child {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: var(--navbar-width);
-}
-
-nav .expanded .el *:last-child {
-    width: calc(var(--navbar-expanded-width) - var(--navbar-width));
-}
-
-nav .expanded .el .icon-sidebar, nav .collapsed .el .icon-sidebar {
-    font-size: 1.6rem;
-}
-
-nav .expanded .list {
-    font-size: 0.9rem;
-    margin-left: 2rem;
-    border-left: 2px solid var(--alt);
-    padding: .5rem 0;
-    padding-left: .5rem;
-    display: flex;
-    flex-direction: column;
-    gap: .8rem;
-}
-
-nav .expanded .list span {
-    cursor: pointer;
-}
-
-nav.active {
-    width: calc(var(--navbar-expanded-width) + var(--navbar-width));
-    transform: translateX(calc(var(--navbar-width) * -1));
-}
-
-#editor {
-    white-space: pre;
-    background-color: var(--theme-1);
-    font-family: 'Open Sans', sans-serif;
-    position: absolute;
-    width: calc(100vw - var(--navbar-width));
-    height: 100vh;
-    top: 0;
-    left: var(--navbar-width);
-    outline: none;
-    padding: 1rem;
-    padding-top: 1.5rem;
-    border-radius: 10px;
-    box-sizing: border-box;
-    overflow: auto;
-    transition: all .6s;
-    z-index: 100;
-    white-space: nowrap;
-}
-
-/* Size */
-#editor::-webkit-scrollbar {
-    width: .35rem;
-    height: .35rem;
-}
-
-/* Track */
-#editor::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-
-/* Handle */
-#editor::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, .2);
-    border-radius: 10px;
-    transition: background .3s;
-}
-
-/* Handle on hover */
-#editor::-webkit-scrollbar-thumb:hover {
-    background: rgba(255, 255, 255, .6);
-}
-
-@keyframes divAppearAnimation {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
-#editor div {
-    animation: 1 0.6s divAppearAnimation;
-}
-
-#noteTitle {
-    position: absolute;
-    /* below value is based on --navbar-expanded-width */
-    left: calc(var(--navbar-expanded-width) + 30%);
-    min-width: 1rem;
-    transform: translateX(-50%);
-    top: 0;
-    box-sizing: border-box;
-    font-size: 2rem;
-    text-wrap: nowrap;
-
-    z-index: 50;
-    opacity: 0;
-    transition: opacity .6s, border-bottom .3s;
-    outline: none;
-    border-bottom: 1px solid rgba(255, 255, 255, 0);
-}
-
-#noteTitle:focus {
-    border-bottom: 1px solid rgba(255, 255, 255, 1);
-}
-
-nav.active~#editor {
-    /* background-color: var(--theme-2); */
-    cursor: pointer;
-}
-
-nav.active~#noteTitle {
-    opacity: 1;
-}
-
-.titleBar {
-    font-family: 'Alkatra', sans-serif;
-    position: fixed;
-    display: flex;
-    align-items: center;
-    padding: 0 .5rem;
-    gap: 1rem;
-    box-sizing: border-box;
-    left: 0;
-    top: -30px;
-    height: 30px;
-    width: 100%;
-    background: rgba(255, 255, 255, .1);
-    backdrop-filter: blur(10px);
-
-    transition: top .15s ease-out;
-
-    -webkit-app-region: drag;
-    z-index: 999;
-}
-
-.titleBar .trafficLight {
-    -webkit-app-region: none;
-}
-
-.titleBar.active {
-    top: 0;
-}
-
-.titleBar .separator {
-    margin-left: auto;
-}
-
-.titleBar .trafficLight {
-    width: 14px;
-    aspect-ratio: 1;
-    border-radius: 100%;
-}
-
-.trafficLight.close {
-    background-color: #FF605C;
-}
-
-.trafficLight.minimise {
-    background-color: #FFBD44;
-}
-
-.trafficLight.maximise {
-    background-color: #00CA4E;
-}
-
-#cloudStatus {
-    color: var(--success);
 }
